# assessment-tasks

./: README.md
task_k/: README.md  pyproject.toml
task_k/bundle_validator/: __init__.py  models.py  validator.py
task_k/bundle_validator.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
task_k/fixtures/: bundle_spec.json  generate_conformant.py
task_k/fixtures/conformant/: backbone.xml  manifest.md5
task_k/fixtures/conformant/m1/regional/: cover-letter.txt
task_k/fixtures/conformant/m2/summaries/: overview.txt
task_k/fixtures/conformant/m3/quality/: cmc-report.txt
task_k/fixtures/conformant/m4/nonclinical/: tox-study.txt
task_k/fixtures/conformant/m5/clinical/: study-001.txt
task_k/tests/: conftest.py  test_validator.py
task_l/: README.md  pyproject.toml  report.md  rubric.yaml
task_l/evidence_scorer/: __init__.py  models.py  rubric.py  scorer.py
task_l/evidence_scorer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
task_l/tests/: test_scorer.py
task_m/: README.md  pyproject.toml
task_m/notebooks/: naive_vs_adjusted.ipynb
task_m/tests/: test_estimator.py
task_m/treatment_effect/: __init__.py  dgp.py  estimator.py  models.py
task_m/treatment_effect.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
task_n/: README.md  mock_sources.py  pyproject.toml  rate_budgets.yaml  report.md
task_n/ingest_queue/: __init__.py  models.py  queue.py
task_n/ingest_queue.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
task_n/tests/: test_queue.py
task_o/: README.md  pyproject.toml  report.md
task_o/schema_diff/: __init__.py  differ.py  models.py
task_o/schema_diff.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
task_o/tests/: test_schema_diff.py
