[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "evidence-scorer"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["pydantic>=2.0", "pyyaml", "numpy"]

[project.optional-dependencies]
dev = ["pytest>=7.0", "hypothesis"]

[tool.setuptools.packages.find]
include = ["evidence_scorer*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
