[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "treatment-effect"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["pydantic>=2.0", "pandas", "numpy", "scipy", "scikit-learn"]

[project.optional-dependencies]
dev = ["pytest>=7.0", "jupyter", "matplotlib"]

[tool.setuptools.packages.find]
include = ["treatment_effect*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
