[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ingest-queue"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["pydantic>=2.0", "pyyaml"]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
include = ["ingest_queue*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
