[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "schema-diff"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["pydantic>=2.0", "pandas"]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
include = ["schema_diff*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
